[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["starcoex <69073390+starcoex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
